========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2018-01-08

  - Fixed #209: Don't require 'ido. User will have to make sure that
    beancount-use-ido is false.


2018-01-07

  - Merged https://bitbucket.org/blais/beancount/pull-requests/28/allow-one-character-top-level-account,
    allowing one character top-level account names in the syntax. This doesn't
    mess with the flag token generateion because the account name is required to
    have at least two components.


2017-12-09

  - Fixed rendering of price directives to use the display context precision.


2017-11-24

  - Silenced annoying warning about file_cache version incompatibility in
    upload-to-sheets.


2017-10-28

  - Fixed bug with identification based on the first line of a file.

  - Fixed bug with 'context' on a directive that's not a transaction.


2017-09-30

  - Fixed a bug in reduction booking that would fail when the units are omitted.


2017-09-17

  - Fixed bug in Balance check, detect when an account does not exist and handle
    it properly.

  - Added bean-difference script, used to reconcile transactions in multiple
    files after a long trip.


2017-09-06

  - Added ABS() implementation to SQL shell for Position and Inventory types.
    See https://groups.google.com/d/msg/beancount/0i4w98LmS6E/JJGOKSB8CQAJ


2017-08-08

  - Accept account name components as numbers only. The grammar safely supports
    this because of the leading semi-colon, all the tests pass, and everything
    runs on my own very large input files.

  - Fixed a failing test with MIME mis-categorization which occurred under
    Ubuntu.


2017-07-25

  - Fixed #181: Support underscores in Python module names for price sources
    (thanks to Stephan Mueller for reporting).


2017-07-23

  - Fixed #179: Scientific notation should never appear in rendered output.


2017-07-02
