@@ -4,6 +4,13 @@
 Note: This file contains only changes in the 'default' branch.
 
 
+2018-01-16
+
+  - CSV importer: Added an option not to add balance metadata to output.
+  - CSV importer: Also, fixed a bug I introduced in the recent PR merge with
+    rendering the name of the importer.
+
+
 2018-01-08
 
   - Fixed #209: Don't require 'ido. User will have to make sure that
